samples/_failures_safe/1761043931_1e4f7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20b8e75d.c: In function ‘parse_string’:
./samples/SAFE/__tmp_20b8e75d.c:170:9: error: expected identifier at end of input
  170 |         tokenizer->
      |         ^~~~~~~~~
./samples/SAFE/__tmp_20b8e75d.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20b8e75d.c:170:9: error: expected declaration or statement at end of input
